fix no padding on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9601,7 +9601,7 @@ h5,
   -ms-transform: scale(0);
   -o-transform: scale(0);
   transform: scale(0);
-  overflow-y: scroll;
+  overflow-y: hidden;
 }
 #colorlib-main-nav .colorlib-table {
   display: table;
